libsoup2.4 (2.38.0-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Sat, 31 Mar 2012 07:24:32 +0200

libsoup2.4 (2.37.92-1) experimental; urgency=low

  * New upstream development release.
  * debian/libsoup2.4-1.symbols: Add new symbol.

 -- Michael Biebl <biebl@debian.org>  Tue, 20 Mar 2012 02:22:10 +0100

libsoup2.4 (2.37.91-1) experimental; urgency=low

  * New upstream development release.
  * debian/libsoup2.4-1.symbols: Add new symbol.
  * debian/control.in: Bump Build-Depends on debhelper to (>= 9).

 -- Michael Biebl <biebl@debian.org>  Thu, 08 Mar 2012 18:41:28 +0100

libsoup2.4 (2.37.90-1) experimental; urgency=low

  * New development release.
  * debian/libsoup2.4-1.symbols:
  - updated for the new version
  * debian/control.in:
  - Bump build-dep and dep on libglib2.0-dev to 2.31.7, following upstream
    change

 -- Gustavo Noronha Silva <kov@debian.org>  Sat, 03 Mar 2012 16:54:11 -0300

libsoup2.4 (2.36.1-2) UNRELEASED; urgency=low

  [ Allison Randal ]
  * Transition to multiarch. Thanks to Allison Randal for the patch!
    (Closes: #651018)

  [ Michael Biebl ]
  * Change section of gir1.2-soup-2.4 to introspection.
  * Remove obsolete Replaces.

  [ Josselin Mouette ]
  * Remove MA: same statements for -dev packages, because they depend on 
    gir packages which are not MA compatible.

 -- Michael Biebl <biebl@debian.org>  Fri, 16 Dec 2011 22:25:30 +0100

libsoup2.4 (2.36.1-1) unstable; urgency=low

  [ Martin Pitt ]
  * debian/watch: Switch to .xz tarballs.
  * New upstream release.
  * debian/control.in: Bump glib build dependency to >= 2.30.0, as per
    configure.ac.

 -- Michael Biebl <biebl@debian.org>  Sun, 27 Nov 2011 18:17:21 +0100

libsoup2.4 (2.36.0-1) unstable; urgency=low

  * New upstream release.
  * Remove debian/patches/02_tls.patch, fixed upstream: Default to TLS for
    https connections, and fall back to SSLv3 on failure.
  * debian/libsoup2.4-1.symbols: Update symbols file.
