@@ -1,8 +1,10 @@
 libsoup2.4 (2.38.0-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Bump minimum required version of glib-networking to 2.32.0.
+  * Update Vcs-* URLs.
 
- -- Michael Biebl <biebl@debian.org>  Sat, 31 Mar 2012 07:24:32 +0200
+ -- Michael Biebl <biebl@debian.org>  Sat, 31 Mar 2012 07:29:23 +0200
 
 libsoup2.4 (2.37.92-1) experimental; urgency=low
 
